# azure-sphere-rtcore-nnom-minst-simple

./: AzureSphereRTCoreToolchainVFP.cmake  CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  main.c
nnom/port/: nnom_port.h
